--- a/index.html
+++ b/index.html
@@ -1,54 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A Magical Surprise</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Montserrat', sans-serif;
-        margin: 0;
-        overflow-x: hidden;
-      }
-      h1, h2, h3, .script-font {
-        font-family: 'Great Vibes', cursive;
-      }
-      
-      /* Smooth gradient animation */
-      @keyframes gradient-xy {
-        0% { background-position: 0% 50%; }
-        50% { background-position: 100% 50%; }
-        100% { background-position: 0% 50%; }
-      }
-      
-      .animate-gradient {
-        background-size: 200% 200%;
-        animation: gradient-xy 15s ease infinite;
-      }
-
-      /* Floating animation */
-      @keyframes float {
-        0% { transform: translateY(0px); opacity: 0.6; }
-        50% { transform: translateY(-20px); opacity: 0.3; }
-        100% { transform: translateY(0px); opacity: 0.6; }
-      }
-
-      .floating-element {
-        animation: float 6s ease-in-out infinite;
-      }
-
-      .glass-panel {
-        background: rgba(255, 255, 255, 0.25);
-        backdrop-filter: blur(12px);
-        -webkit-backdrop-filter: blur(12px);
-        border: 1px solid rgba(255, 255, 255, 0.5);
-        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.1);
-      }
-    </style>
   <script type="importmap">
 {
   "imports": {
@@ -57,12 +16,15 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "canvas-confetti": "https://esm.sh/canvas-confetti@^1.9.4",
-    "framer-motion": "https://esm.sh/framer-motion@^12.23.26"
+    "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
